# VortexEngine

./: .gitmodules  CMakeLists.txt  LICENSE.md
dependencies/: CMakeLists.txt
dependencies/glad45/: CMakeLists.txt
dependencies/glad45/include/glad/: glad.h
dependencies/glad45/src/: glad.c
dependencies/stb/: CMakeLists.txt
dependencies/stb/src/: stb_lib.cpp
include/Vortex/Audio/: AudioAPI.h  AudioBackend.h
include/Vortex/Common/: Console.h  DynamicLibrary.h  FNV1Hasher.h  Handle.h  HandleMap.h  HashedString.h  IntegerPacker.h  Logger.h  Signal.h  Singleton.h  StrongHandle.h  StrongHandleMap.h  ThreadPool.h  ThreadSafeRW.h  Timer.h
include/Vortex/Containers/: Array.h  DynamicArray.h  Iterator.h  List.h  Queue.h  RawBuffer.h  StaticArray.h  Vector.h
include/Vortex/Core/: Application.h  Event.h  Input.h  Keycode.h
include/Vortex/Debug/: Assert.h  Profiler.h
include/Vortex/Graphics/: AbstractData.h  BufferLayout.h  GraphicsAPI.h  GraphicsEnum.h  GraphicsStructs.h  ImageLoader.h  LineRenderer.h  MeshLayout.h  RenderBackend.h  Renderer.h  WindowBackend.h
include/Vortex/IO/: MathSerializables.h  Serializable.h  Serializer.h
include/Vortex/Math/: BasicAngle.h  BasicCircle.h  BasicGUID.h  BasicLineSegment2.h  BasicMatrix.h  BasicMatrixInvert.h  BasicMatrixMultiplication.h  BasicRectangle.h  BasicTriangle.h  BasicVector.h  Color.h  MathToString.h  Quaternion.h  Random.h  VortexMath.h  VortexMathConstants.h  VortexMathFunctions.h
include/Vortex/Memory/: Allocator.h  HeapAllocator.h  Memory.h  SmartPointers.h
src/Vortex/: pch.h
src/Vortex/Audio/: AudioAPI.cpp  OpenALBackend.cpp  OpenALBackend.h
src/Vortex/Common/: Console.cpp  DynamicLibrary.cpp  ThreadPool.cpp
src/Vortex/Core/: Application.cpp  Input.cpp
src/Vortex/Debug/: Profiler.cpp
src/Vortex/Graphics/: GLFWBackend.cpp  GLFWBackend.h  GraphicsAPI.cpp  ImageLoader.cpp  LineRenderer.cpp  OpenGL45Backend.cpp  OpenGL45Backend.h  OpenGL45Enums.h  Renderer.cpp
src/Vortex/Math/: Quaternion.cpp  Random.cpp  VortexMath.cpp
src/Vortex/Memory/: HeapAllocator.cpp
src/Vortex/Platform/OpenGL45/: OpenGL45Enums.h  OpenGL45Renderer.cpp  OpenGL45Renderer.h
